--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^3.6.0",
     "@ngneat/falso": "^7.2.0",
     "@prisma/client": "^5.16.1",
+    "@types/leaflet": "^1.9.21",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "leaflet": "^1.9.4",
