--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     "no-return-assign": "off",
     "object-curly-newline": "off",
     "prefer-arrow-callback": "off",
+    "react/prop-types": "off",
 
     // ✅ Allow TS/TSX imports without extensions
     "import/extensions": [
