--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@hookform/resolvers": "^3.6.0",
     "@ngneat/falso": "^7.2.0",
     "@prisma/client": "^5.16.1",
-    "@types/leaflet": "^1.9.21",
     "@supabase/supabase-js": "^2.86.0",
+    "@types/leaflet": "^1.9.21",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "leaflet": "^1.9.4",
@@ -43,7 +43,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "14.2.10",
+    "eslint-config-next": "^16.0.6",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.3.1",
     "prettier-eslint": "^16.3.0",
