--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "^16.0.6",
+    "eslint-config-next": "14.2.10",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.3.1",
     "prettier-eslint": "^16.3.0",
