--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -1,4 +1,4 @@
-name: ci-manoa-guesser
+name: ESLint
 on:
   push:
     branches: [main, master]
@@ -15,9 +15,5 @@ jobs:
           node-version: lts/*
       - name: Install dependencies
         run: npm ci
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
       - name: Run ESLint
         run: npm run lint
-      - name: Run Playwright tests
-        run: npx playwright test
