--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "14.2.10",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.32.0",
     "prettier": "^3.3.1",
     "prettier-eslint": "^16.3.0",
     "prisma": "^5.19.1",
