--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     "object-curly-newline": "off",
     "prefer-arrow-callback": "off",
     "react/prop-types": "off",
+    "consistent-return": "off",
 
     // ✅ Allow TS/TSX imports without extensions
     "import/extensions": [
