--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,6 +8,10 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    env:
+      NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+      NEXTAUTH_URL: "http://localhost:3000"
+      POSTGRES_PRISMA_URL: ${{ vars.POSTGRES_PRISMA_URL }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
